# graph_database

./: README.md
tp1/: README.md  main.py  pyproject.toml  requirements.txt
tp1/knoledge_graphs/: __init__.py  api.py  data.py  graph.py  recommendation.py
tp2/: docker-compose.yml  test.py
tp2/app/: etl.py  main.py  queries.cypher  requirements.txt  run.py  start.sh  test.py
tp2/postgres/init/: 01_schema.sql  02_seed.sql
tp2/scripts/: check_containers.sh
