[project]
name = "knoledge-graphs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.0",
    "neo4j>=5.0",
    "psycopg2-binary>=2.9",
    "networkx>=3.5",
    "matplotlib>=3.10.6",
]
